--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header>
 <!-- imagem -->
-<img src="baseProjetoCardapio/imagens/logo.png" >
+<img src="baseProjetoCardapio/imagens/logo.png" alt="logo BBQ BRO" class="logo" >
 <!-- navegação -->
     <nav>
         <a href="#Hamburguer">Hamburguer</a>
@@ -20,17 +20,26 @@
 </header>
 
 <main>
-<section>
+<h1>Cardápio</h1>
+<section></section>
 
-</section>
+<h2 id="Hamburguer">Hamburguer</h2>
+
+<div class="boxProduto">
+<div class="boxImg">
+    <img src="baseProjetoCardapio/imagens/burger01.png" alt="Clássico Angus Burger" class="imagemProduto">
+</div>
+<div class="boxTexto">
+    <h3>Clássico Angus Burger - <strong>R$22,50</strong></h3>
+    <p>Delicie-se com o nosso Hambúrguer Clássico, feito com um suculento hambúrguer de carne angus, queijo derretido, alface crocante, tomate fresco e um toque especial do nosso molho secreto. Perfeito para saciar sua fome!</p>
+<button>Pedir</button>
+</div>
+
 
 
 <section></section>
 
-
 <section></section>
-
-
 
 </main>
 
